# SpikingNetworkRust

./: .gitignore  Cargo.toml  README.md  convert_weights.js  openreview_review.txt
experiment/: baseline_nonSNN.py  plot_figures.py
experiment/eval/: main.rs
experiment/file_model/: ablation_results.json  ablation_results_distil.json  baseline_results.json  biological_sensitivity.json  download_sts.py  eval_all_datasets_metrics.json  eval_metrics.json  full_eval_controlled.json  human_only_dataset.json  log_eval_all_distil.txt  log_eval_all_human.txt  log_eval_all_simcse.txt  log_eval_distil.txt  log_eval_human.txt  log_eval_simcse.txt  mteb_sickr-sts.json  mteb_sts12-sts.json  mteb_sts13-sts.json  mteb_sts14-sts.json  mteb_sts15-sts.json  mteb_sts16-sts.json  sts-b_valid.json  vocab.json
experiment/model/: sentence_embedder.rs  sentence_embedder_simcse.rs
experiment/test_sentence_versus/: main.rs
experiment/test_single_pair/: main.rs
experiment/train/: main.rs
experiment/train_distillation/: main.rs
experiment/train_human_only/: main.rs
experiment/train_simcse/: main.rs
iclr2026/: iclr2026_conference.aux  iclr2026_conference.bbl  iclr2026_conference.bib  iclr2026_conference.blg  iclr2026_conference.out  iclr2026_conference.sty  iclr2026_conference.tex
src/: lib.rs
src/core/: bpe.rs  contrastiveHebbian.rs  delta.rs  dotProduct.rs  dotProductAddOnly.rs  lifStep.rs  mod.rs  normalize.rs  surrogate.rs
src/layers/: base.rs  dense_bptt.rs  embedding.rs  mod.rs  self_attention.rs
src/models/: mod.rs  sentence_embedder.rs  (+1 more)
tests/: test_layers.rs
