[package]
name = "SpikingNetworkRust"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rand = "0.8.5"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "train"
path = "experiment/train/main.rs"

[[bin]]
name = "eval"
path = "experiment/eval/main.rs"

[[bin]]
name = "test_sentence_versus"
path = "experiment/test_sentence_versus/main.rs"

[[bin]]
name = "train_simcse"
path = "experiment/train_simcse/main.rs"
